--- a/app/index.html
+++ b/app/index.html
@@ -13,5 +13,5 @@
     <button>Press Me</button>
     <script src="js/main.min.js"></script>
 </body>
-<footer>Footer</footer>
+<footer>FooterFooterFooter</footer>
 </html>
